swtich from path.of to paths.get for android 8